--- a/ui/host.glade
+++ b/ui/host.glade
@@ -17,12 +17,53 @@
       </object>
     </child>
   </object>
+  <object class="GtkActionGroup" id="actions_network_protocol">
+    <property name="accel_group">accelerators</property>
+    <child>
+      <object class="GtkRadioAction" id="action_protocol_udp">
+        <property name="short_label" translatable="yes">_UDP</property>
+        <property name="draw_as_radio">True</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkRadioAction" id="action_protocol_tcp">
+        <property name="short_label" translatable="yes">_TCP</property>
+        <property name="draw_as_radio">True</property>
+      </object>
+    </child>
+  </object>
+  <object class="GtkActionGroup" id="actions_snmp_protocol">
+    <property name="accel_group">accelerators</property>
+    <child>
+      <object class="GtkRadioAction" id="action_snmp_v1">
+        <property name="short_label" translatable="yes">1 (RFCs 1155-1157)</property>
+        <property name="draw_as_radio">True</property>
+        <property name="value">1</property>
+      </object>
+    </child>
+    <child>
+      <object class="GtkRadioAction" id="action_snmp_v2c">
+        <property name="short_label" translatable="yes">2c (RFCs 1901-1908)</property>
+        <property name="draw_as_radio">True</property>
+        <property name="value">2</property>
+        <property name="group">action_snmp_v1</property>
+      </object>
+    </child>
+  </object>
   <object class="GtkAdjustment" id="adjustment_port_number">
     <property name="lower">1</property>
     <property name="upper">65535</property>
     <property name="value">161</property>
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
+  </object>
+  <object class="GtkListStore" id="store_services">
+    <columns>
+      <!-- column-name Name -->
+      <column type="gchararray"/>
+      <!-- column-name Enabled -->
+      <column type="gboolean"/>
+    </columns>
   </object>
   <object class="GtkDialog" id="dialog_host">
     <property name="can_focus">False</property>
@@ -146,21 +187,6 @@
             <property name="row_spacing">6</property>
             <property name="column_spacing">12</property>
             <child>
-              <object class="GtkLabel" id="lbl_name">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" comments="Use domain gtk30">_Name:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">txt_name</property>
-                <property name="ellipsize">middle</property>
-                <property name="xalign">1</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">0</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkEntry" id="txt_name">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -171,20 +197,6 @@
               <packing>
                 <property name="left_attach">1</property>
                 <property name="top_attach">0</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="lbl_description">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">_Description:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">txt_description</property>
-                <property name="xalign">1</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">1</property>
               </packing>
             </child>
             <child>
@@ -201,72 +213,6 @@
               </packing>
             </child>
             <child>
-              <object class="GtkLabel" id="lbl_address">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">_Address:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">txt_address</property>
-                <property name="xalign">1</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">2</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkEntry" id="txt_address">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="hexpand">True</property>
-                <property name="activates_default">True</property>
-                <signal name="changed" handler="on_txt_address_changed" swapped="no"/>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">2</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="lbl_port_number">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">_Port number:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">spin_port_number</property>
-                <property name="xalign">1</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">3</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkSpinButton" id="spin_port_number">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="adjustment">adjustment_port_number</property>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">3</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="lbl_community">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">_Community string:</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">txt_community</property>
-                <property name="xalign">1</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
-                <property name="top_attach">4</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkEntry" id="txt_community">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
@@ -277,6 +223,225 @@
               <packing>
                 <property name="left_attach">1</property>
                 <property name="top_attach">4</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkAlignment" id="alignment_name">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="xalign">1</property>
+                <property name="xscale">0</property>
+                <child>
+                  <object class="GtkLabel" id="lbl_name">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" comments="Use domain gtk30">_Name:</property>
+                    <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">txt_name</property>
+                    <property name="ellipsize">middle</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkAlignment" id="alignment_description">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="xalign">1</property>
+                <property name="xscale">0</property>
+                <child>
+                  <object class="GtkLabel" id="lbl_description">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">_Description:</property>
+                    <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">txt_description</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">1</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkAlignment" id="alignment_address">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="xalign">1</property>
+                <property name="xscale">0</property>
+                <child>
+                  <object class="GtkLabel" id="lbl_address">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">_Address:</property>
+                    <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">txt_address</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkAlignment" id="alignment_community">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="xalign">1</property>
+                <property name="xscale">0</property>
+                <child>
+                  <object class="GtkLabel" id="lbl_community">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">_Community string:</property>
+                    <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">txt_community</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">4</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkAlignment" id="alignment_snmp_protocol">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="xalign">1</property>
+                <property name="xscale">0</property>
+                <child>
+                  <object class="GtkLabel" id="lbl_snmp_protocol">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" comments="Use domain gtk30">_SNMP Protocol:</property>
+                    <property name="use_underline">True</property>
+                    <property name="mnemonic_widget">box_snmp_protocol</property>
+                    <property name="ellipsize">middle</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">3</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkBox" id="box_snmp_protocol">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="spacing">13</property>
+                <child>
+                  <object class="GtkRadioButton" id="radio_snmp_protocol_v1">
+                    <property name="use_action_appearance">True</property>
+                    <property name="related_action">action_snmp_v1</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="xalign">0.5</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkRadioButton" id="radio_snmp_protocol_v2c">
+                    <property name="use_action_appearance">True</property>
+                    <property name="related_action">action_snmp_v2c</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="hexpand">False</property>
+                    <property name="xalign">0</property>
+                    <property name="active">True</property>
+                    <property name="draw_indicator">True</property>
+                    <property name="group">radio_snmp_protocol_v1</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">3</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkBox" id="box_network_protocol">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="spacing">7</property>
+                <child>
+                  <object class="GtkEntry" id="txt_address">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="hexpand">True</property>
+                    <property name="activates_default">True</property>
+                    <signal name="changed" handler="on_txt_address_changed" swapped="no"/>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">0</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkLabel" id="label_protocol_separator">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label">:</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkSpinButton" id="spin_port_number">
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="adjustment">adjustment_port_number</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkComboBoxText" id="combo_protocol">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="active">0</property>
+                    <items>
+                      <item id="UDP" translatable="yes">UDP</item>
+                      <item id="TCP" translatable="yes">TCP</item>
+                    </items>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">3</property>
+                  </packing>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">2</property>
               </packing>
             </child>
           </object>
