--- a/ui/host.glade
+++ b/ui/host.glade
@@ -57,12 +57,12 @@
     <property name="step_increment">1</property>
     <property name="page_increment">10</property>
   </object>
-  <object class="GtkListStore" id="store_services">
+  <object class="GtkListStore" id="store_devices">
     <columns>
       <!-- column-name Name -->
       <column type="gchararray"/>
-      <!-- column-name Enabled -->
-      <column type="gboolean"/>
+      <!-- column-name Description -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkDialog" id="dialog_host">
@@ -442,6 +442,45 @@
               <packing>
                 <property name="left_attach">1</property>
                 <property name="top_attach">2</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkAlignment" id="alignment_device">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="xalign">1</property>
+                <property name="xscale">0</property>
+                <child>
+                  <object class="GtkLabel" id="lbl_device">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">_Device type:</property>
+                    <property name="use_underline">True</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">5</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkComboBox" id="combo_device">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="model">store_devices</property>
+                <property name="active">0</property>
+                <property name="id_column">0</property>
+                <child>
+                  <object class="GtkCellRendererText" id="cell_device"/>
+                  <attributes>
+                    <attribute name="text">0</attribute>
+                  </attributes>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">5</property>
               </packing>
             </child>
           </object>
