--- a/ui/main.glade
+++ b/ui/main.glade
@@ -14,6 +14,14 @@
       <accelerator key="s" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
     </child>
     <child>
+      <object class="GtkAction" id="action_devices">
+        <property name="label" translatable="yes">_Device types</property>
+        <property name="icon_name">preferences-desktop-peripherals</property>
+        <signal name="activate" handler="on_action_devices_activate" swapped="no"/>
+      </object>
+      <accelerator key="d" modifiers="GDK_SHIFT_MASK | GDK_CONTROL_MASK"/>
+    </child>
+    <child>
       <object class="GtkAction" id="action_about">
         <property name="label" comments="Use domain gtk30">_About</property>
         <property name="icon_name">help-about</property>
@@ -192,6 +200,8 @@
       <column type="gint"/>
       <!-- column-name Community -->
       <column type="gchararray"/>
+      <!-- column-name Device -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkApplicationWindow" id="win_main">
@@ -278,6 +288,19 @@
               <object class="GtkToolButton" id="tlb_services">
                 <property name="use_action_appearance">True</property>
                 <property name="related_action">action_services</property>
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="use_underline">True</property>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="homogeneous">True</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkToolButton" id="tlb_devices">
+                <property name="use_action_appearance">True</property>
+                <property name="related_action">action_devices</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="use_underline">True</property>
