--- a/ui/host.glade
+++ b/ui/host.glade
@@ -493,7 +493,7 @@
                   <object class="GtkLabel" id="lbl_requests">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="label" translatable="yes">_Requests type:</property>
+                    <property name="label" translatable="yes">Parallel _requests:</property>
                     <property name="use_underline">True</property>
                   </object>
                 </child>
@@ -509,8 +509,22 @@
                 <property name="can_focus">False</property>
                 <property name="active">0</property>
                 <items>
-                  <item id="0" translatable="yes">Multiple</item>
-                  <item id="1" translatable="yes">Single</item>
+                  <item id="0">Default</item>
+                  <item id="1">1</item>
+                  <item id="2">2</item>
+                  <item id="3">3</item>
+                  <item id="4">4</item>
+                  <item id="5">5</item>
+                  <item id="6">6</item>
+                  <item id="7">7</item>
+                  <item id="8">8</item>
+                  <item id="9">9</item>
+                  <item id="10">10</item>
+                  <item id="11">11</item>
+                  <item id="12">12</item>
+                  <item id="13">13</item>
+                  <item id="14">14</item>
+                  <item id="15">15</item>
                 </items>
               </object>
               <packing>
