--- a/ui/snmp_values.glade
+++ b/ui/snmp_values.glade
@@ -185,6 +185,16 @@
             <property name="position">1</property>
           </packing>
         </child>
+        <child>
+          <object class="GtkProgressBar" id="progress_requests">
+            <property name="can_focus">False</property>
+          </object>
+          <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
+            <property name="position">2</property>
+          </packing>
+        </child>
       </object>
     </child>
   </object>
