--- a/ui/snmp_values.glade
+++ b/ui/snmp_values.glade
@@ -14,12 +14,20 @@
       <accelerator key="F5"/>
     </child>
     <child>
-      <object class="GtkAction" id="action_timer">
+      <object class="GtkToggleAction" id="action_timer">
         <property name="short_label" translatable="yes">_Timer</property>
-        <property name="icon_name">media-record</property>
+        <property name="icon_name">media-playlist-repeat</property>
+        <signal name="toggled" handler="on_action_timer_toggled" swapped="no"/>
       </object>
       <accelerator key="F5" modifiers="GDK_CONTROL_MASK"/>
     </child>
+  </object>
+  <object class="GtkAdjustment" id="adjustment_timer">
+    <property name="lower">500</property>
+    <property name="upper">10000000</property>
+    <property name="value">5000</property>
+    <property name="step_increment">500</property>
+    <property name="page_increment">1000</property>
   </object>
   <object class="GtkListStore" id="store_values">
     <columns>
@@ -62,9 +70,12 @@
               </packing>
             </child>
             <child>
-              <object class="GtkSeparatorToolItem" id="tlb_separator">
+              <object class="GtkToggleToolButton" id="tlb_timer">
+                <property name="use_action_appearance">True</property>
+                <property name="related_action">action_timer</property>
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
+                <property name="use_underline">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -72,12 +83,9 @@
               </packing>
             </child>
             <child>
-              <object class="GtkToolButton" id="tlb_timer">
-                <property name="use_action_appearance">True</property>
-                <property name="related_action">action_timer</property>
+              <object class="GtkSeparatorToolItem" id="tlb_separator">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="use_underline">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -92,12 +100,12 @@
                   <object class="GtkBox" id="box_timer">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="spacing">11</property>
+                    <property name="spacing">7</property>
                     <child>
                       <object class="GtkLabel" id="label_timer">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Automatic refresh every ms</property>
+                        <property name="label" translatable="yes">Automatic refresh timer</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -109,9 +117,9 @@
                       <object class="GtkSpinButton" id="spin_timer">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="adjustment">adjustment_timer</property>
                         <property name="climb_rate">100</property>
                         <property name="numeric">True</property>
-                        <property name="value">1000</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
