--- a/ui/services.glade
+++ b/ui/services.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 -->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.0"/>
   <object class="GtkAccelGroup" id="accelerators"/>
@@ -39,6 +39,8 @@
       <!-- column-name Name -->
       <column type="gchararray"/>
       <!-- column-name Description -->
+      <column type="gchararray"/>
+      <!-- column-name Numeric OID -->
       <column type="gchararray"/>
     </columns>
   </object>
